--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="large-12 columns">
-    <h1 class="large-offset-1">Welcome to The Offical home of Don Cheadle</h1>
+    <h1 class="large-offset-1">Welcome to the offical home of Don Cheadle</h1>
   </div>
 </div> 
 
 
   <div class="row chead">
-      <div class="large-offset-4">
-        <img src="{{root}}assets/img/don-cheadle.png" alt="">
+      <div>
+        <img src="{{root}}assets/img/donHat.png" class="float-center" alt="">
       </div>
   </div>
 
