--- a/cheadle.html
+++ b/cheadle.html
@@ -19,10 +19,13 @@
         <li><a href="webGL.html">webgl</a></li>
       </ul>
     </header>
-    <div>
-        <script src="assets/js/three.min.js"></script>
-        <script src="assets/js/webglApp.js"></script>
-    </div>
+    <hr>
+      <div class="row chead">
+          <div>
+            <img src="assets/img/donHat.png" class="float-center" alt="">
+          </div>
+      </div>
+    <hr>
     <div id="footerWrapper">
         <div class="row">
             <div class="column-6">
