--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <!-- <h1 class="headline">XXXX</h1> -->
-      <img src="/assets/img/proto.png" id="navBarLogo" alt="">
+      <img src="assets/img/proto.png" id="navBarLogo" alt="">
       <ul class="header-subnav">
         <li><a class="is-active" href="index.html">Home</a></li>
         <li><a href="#">Forum</a></li>
